添加了base模板，使用BootStrap美化了页面

--- a/app/templates/add_conference.html
+++ b/app/templates/add_conference.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{title}} - microblog</title>
-</head>
-<body>
-    <h1>Hello, {{user.username}}!</h1>
+{% extends "base.html" %}
+{% block content %}
+    <br><br>
     <form name="addConference" action="" method="post">
-    	{{form.hidden_tag() }}
-    	<p>
-    		会议名称: {{form.name(size=64)}}<br><br>
-    	</p>
-    	<p>
-    		会议时间: {{form.date}}<br><br>
-    	</p>
-    	<p>
-    		会议地点: {{form.place(size=128)}}<br><br>
-    	</p>
-    	<p>
-    		<input type="submit" name="提交">
-    	</p>
+        {{form.hidden_tag() }}
+        <p>
+            会议名称: {{form.name(size=48)}}<br><br>
+        </p>
+        <p>
+            会议时间: {{form.date}} &nbsp;&nbsp;&nbsp;&nbsp;  <em>格式：<mark>yyyy-mm-dd hh:mm:ss</mark></em>
+            <br><br>
+        </p>
+        <p>
+            会议地点: {{form.place(size=48)}}<br><br>
+        </p>
+        <p>
+            <input type="submit" name="提交">
+        </p>
     </form>
-</body>
-</html>
+{% endblock %}
