--- a/app/templates/preview.html
+++ b/app/templates/preview.html
@@ -26,7 +26,7 @@
                             </tr>
                             <tr>
                                 {% if user %}
-                                <td><h4>&bull;嘉宾介绍：{{user.username}}</h4></td>
+                                <td><h4>&bull;嘉宾介绍：</h4></td>
                                 <!--嘉宾介绍-->
                                 {% endif %}
                             </tr>
